# kairei-v2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  test_manual_lora.py
.github/: dependabot.yml
.github/workflows/: build.yml  security.yml  test.yml
crates/kairei/: Cargo.toml
crates/kairei-api/: .gitignore  Cargo.toml  README.md  config.development.example.json  config.example.json
crates/kairei-api/src/: config.rs  lib.rs
crates/kairei-api/src/middleware/: auth.rs
crates/kairei-api/src/routes/: health.rs  mod.rs
crates/kairei-api/src/routes/v1/: base_model.rs  lora.rs  mod.rs  training_data.rs
crates/kairei-api/tests/: v1_base_model_test.rs  v1_lora_test.rs
crates/kairei-candle/: Cargo.toml
crates/kairei-candle/src/: error.rs  lib.rs  llama2_lora.rs  llama2_manual_lora.rs  llama2c.rs  llama2c_processor.rs  llama3_lora.rs  model.rs  processor.rs  train.rs
crates/kairei-candle/src/models/: llama2c.rs  lora.rs  mod.rs
crates/kairei-cli/: Cargo.toml
crates/kairei-cli/src/: error.rs  lib.rs  main.rs
crates/kairei-cli/src/commands/: chat.rs  init.rs  lora.rs  mod.rs  run.rs  setup.rs  train.rs
crates/kairei-core/: Cargo.toml
crates/kairei-core/src/: error.rs  kernel.rs  lib.rs  processor.rs  request.rs  tuner.rs  types.rs
crates/kairei/src/: app.rs  config.rs  error.rs  lib.rs
crates/kairei/src/base_model/: downloader.rs  error.rs  in_memory_repository.rs  mod.rs  model.rs  postgres_repository.rs  repository.rs  service.rs
crates/kairei/src/lora/: error.rs  in_memory_repository.rs  mod.rs  model.rs  postgres_repository.rs  repository.rs  service.rs  training.rs
crates/kairei/src/storage/: error.rs  local.rs  mod.rs  traits.rs
crates/kairei/src/training_data/: entity.rs  error.rs  in_memory_repository.rs  mod.rs  repository.rs  service.rs
crates/kairei/tests/: integration_tests.rs
crates/kairei/tests/base_model/: mod.rs  postgres_repository_test.rs
crates/kairei/tests/lora/: mod.rs  postgres_repository_test.rs
evaluation/: .gitignore  pyproject.toml  test_deepeval_simple.py  test_simple.py
evaluation/tests/: test_cultural_norms.py
migrations/: 20241221_create_base_models.sql  20241222_create_loras.sql
scripts/: download_tinyllama.py
training/: .gitignore  create_dummy_lora.py  pyproject.toml  train_lora_properly.py
training/docs/: cpu_friendly_models.md  lora_model_selection.md  tinyllama_data_format.md
training/scripts/: train_lora.py
