[tool.poetry]
name = "kairei-training"
version = "0.1.0"
description = "LoRA training tools for Kairei"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.36.0"
peft = "^0.7.0"
torch = "^2.0.0"
safetensors = "^0.4.0"
accelerate = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
