[package]
name = "kairei-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for Kairei-v2 AgentCulture Framework"

[dependencies]
kairei = { path = "../kairei", features = ["candle"] }
kairei-candle = { path = "../kairei-candle" }
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-lora = { git = "https://github.com/ynishi/candle-lora.git" }
candle-lora-transformers = { git = "https://github.com/ynishi/candle-lora.git" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
rustyline = "16"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
hf-hub = { version = "0.4", features = ["tokio"] }
dirs = "5"

[features]
default = []