[package]
name = "kairei-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core engine for Kairei-v2 AgentCulture Framework"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Optional candle backend
kairei-candle = { path = "../kairei-candle", optional = true }

[features]
default = ["candle"]
candle = ["dep:kairei-candle"]
