[package]
name = "kairei"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Main crate for Kairei-v2 AgentCulture Framework"

[dependencies]
kairei-core = { workspace = true }
kairei-candle = { path = "../kairei-candle", optional = true }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
strum = { version = "0.27.2", features = ["derive"] }
uuid = "1.17.0"
strum_macros = "0.27.2"
chrono = { version = "0.4", features = ["serde"] }
hf-hub = { version = "0.4", features = ["tokio"] }
toml = "0.8"
serde_json = "1.0"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
dotenv = "0.15"
sha256 = "1.5"

[features]
default = []
candle = ["dep:kairei-candle"]
